--- a/setup/environment.yml
+++ b/setup/environment.yml
@@ -47,7 +47,8 @@ dependencies:
     - gql
     - grpcio-tools
     - importlib-metadata==0.23
-    - injective-py==1.2.*
+    - injective-py==1.4.*
+    - matplotlib==3.8.3
     - jsonpickle==3.0.1
     - mypy-extensions==0.4.3
     - pandas_ta==0.3.14b
