added optuna as dependency for use in my strategies

--- a/setup/environment.yml
+++ b/setup/environment.yml
@@ -58,6 +58,7 @@ dependencies:
     - pyjwt==1.7.1
     - pyperclip==1.7.0
     - python-telegram-bot==12.8
+    - optuna==3.6.1
     - requests==2.*
     - rsa==4.7
     - ruamel-yaml==0.16.10
