--- a/DiscordBot/Cargo.toml
+++ b/DiscordBot/Cargo.toml
@@ -12,7 +12,7 @@ debounced = "0.1.0"
 env_logger = "0.11.3"
 futures = "0.3.30"
 log = "0.4.21"
-headless_chrome = { version = "1.0.9", features = ["fetch"] }
+headless_chrome = { version = "1.0.9" }
 notify = "6.1.1"
 notify-debouncer-mini = "0.4.1"
 poise = "0.6.1"
@@ -26,3 +26,5 @@ tiny_http = "0.12.0"
 tokio = { version = "1.37.0", features = ["rt", "rt-multi-thread"] }
 urlencoding = "2.1.3"
 
+[features]
+fetch_chrome = ["headless_chrome/fetch"]
